# Astraeus

./: .gitignore  README
point_five/: UpgradeLog.XML  UpgradeLog2.XML
point_five/.svn/: all-wcprops  entries
point_five/.svn/text-base/: point_five.sln.svn-base
point_five/Debug/: tests.ilk
point_five/Debug/gmock/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  vc100.idb
point_five/gamelib/: gamelib.vcxproj
point_five/gamelib/.svn/: all-wcprops  entries
point_five/gamelib/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  gamelib.lib  lib.command.1.tlog  vc100.idb
point_five/gmock-1.6.0/.svn/: all-wcprops  entries
point_five/gtest/: CMakeCache.txt  Makefile
point_five/gtest/.svn/: all-wcprops  entries
point_five/tests/: kinematicsdata.csv  tests.cpp
point_five/tests/.svn/: all-wcprops  entries
zero/: CMakeLists.txt
zero/include/: actor.h  asteroid.h  collisionhandler.h  kinematics.h
zero/src/: CMakeLists.txt  a.out  actor.cpp  actor.h  asteroid.cpp  bullet.cpp  bullet.h  collisionhandler.cpp  kinematics.cpp  kinematics.h  ship.cpp  ship.h  vector2.h
zero/tests/: .~lock.kinematicsdata.csv#  CMakeLists.txt  Makefile  actor_unittest.cpp  asteroid_unittest.cpp  astraeus  bullet_unittest.cpp  kinematics_unittest.cpp  kinematicsdata.csv  sample1_unittest  sample1_unittest.cc  ship_unittest.cpp  tags
zero/tests/lib/gtest/: CTestTestfile.cmake  cmake_install.cmake
zero/tests/mocks/: CMakeLists.txt  mockactor.h
(+49 files in other folders)
